ops/k8s/base/payment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    app: payment 

spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
      containers:
        - name: payment
          image: ghcr.io/lordpangan/payment-service:local
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              initialDelaySeconds: 5
              periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              initialDelaySeconds: 10
              periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
